--- a/index.html
+++ b/index.html
@@ -577,89 +577,134 @@
     </div>
 
 
-    <section class="container__more-info">
-        <div class="more-info__title">
-            <h1 class="red-text">EXPERIMENTE AGORA!</h1>
-            <h2 class="white-text">Com apenas alguns cliques, você será capaz de usar todas nossas otimizações e
-                nossa
-                Inteligência Artificial!</h2>
-        </div>
-
-        <div class="more-info__content">
-            <div class="more-info__container__image">
-                <img src="./assets/cs2-with-perf-overlay.webp" alt="">
+    <div class="w-full min-h-[500px] flex flex-col justify-center items-center gap-y-[50px] bg-[#FFFFFF] dark:bg-[#000000] py-[40px] px-[40px]"
+        id="COMPATIBILITY_SECTION">
+        <div class="w-full flex flex-col justify-center items-center gap-y-[40px]">
+            <div class="w-full flex flex-col justify-center items-center">
+                <p class="text-[18px] text-[#BD162C] font-[700] text-center">EXPERIMENTE AGORA!</p>
+                <p class="text-[16px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400] text-center">Com apenas alguns
+                    cliques, você será capaz de usar todas nossas otimizações e nossa Inteligência Artificial!</p>
             </div>
-
-            <div class="more-info__container__main">
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/mallet.png" alt="">
+            <div class="flex justify-start items-start gap-[40px]">
+                <div class="relative aspect-w-16 aspect-h-9 xl:w-[700px] rounded-[4px] overflow-hidden cursor-pointer">
+                    <div class="relative h-[400px] flex justify-center items-center">
+                        <div class="w-full h-full absolute top-[0px] left-[0px]" style="opacity: 0;">
+                            <div class="absolute top-[60px] left-[60px]" style="opacity: 1;">
+                                <div class="w-[1px] h-[1px] pointer-events-none"
+                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                            </div>
+                            <div class="absolute bottom-[60px] right-[60px]" style="opacity: 1;">
+                                <div class="w-[1px] h-[1px] pointer-events-none"
+                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                            </div><img alt="" src="/assets/cod-with-perf-overlay.webp" width="100%" style="opacity: 0;">
                         </div>
-                        <span>Windows Tweaks</span>
+                        <div class="w-full h-full absolute top-[0px] left-[0px]" style="opacity: 1;">
+                            <div class="absolute top-[60px] left-[60px]" style="opacity: 0;">
+                                <div class="w-[1px] h-[1px] pointer-events-none"
+                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                            </div>
+                            <div class="absolute bottom-[60px] right-[60px]" style="opacity: 0;">
+                                <div class="w-[1px] h-[1px] pointer-events-none"
+                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                            </div><img alt="" src="/assets/rocket-league-with-perf-overlay.webp" width="100%"
+                                style="opacity: 1;">
+                        </div>
                     </div>
-                    <p>Aplique diversas otimizações para o seu sistema operacional e para sua placa gráfica!</p>
                 </div>
-
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/ice.png" alt="">
+                <div class="w-full xl:w-auto grid grid-cols-2 gap-[20px]">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                        <div class="flex justify-start items-center gap-x-[10px]">
+                            <div
+                                class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
+                                <img width="20" height="20" src="/assets/mallet.png">
+                            </div>
+                            <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">Windows
+                                Tweaks</p>
                         </div>
-                        <span>GPO</span>
+                        <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Aplique diversas otimizações para o
+                            seu sistema operacional e para sua placa gráfica!</p>
                     </div>
-                    <p>Otimize as threads do seu jogo e congele serviços e aplicações enquanto estiver jogando!</p>
-                </div>
-
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/Brain.png" alt="">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                        <div class="flex justify-start items-center gap-x-[10px]">
+                            <div
+                                class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
+                                <img width="20" height="20" src="/assets/ice.png">
+                            </div>
+                            <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">GPO</p>
                         </div>
-                        <span>Frame Generation</span>
+                        <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Otimize as threads do seu jogo e
+                            congele serviços e aplicações enquanto estiver jogando!</p>
                     </div>
-                    <p>Aplique nossa tecnologia de upscaling e frame generation no seu jogo para duplicar seu FPS!
-                    </p>
-                </div>
-
-                <div class="main__content">
-                    <div class="container-icon">
-                        <div class="icon__more__container">
-                            <img src="./assets/monitor.png" alt="">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                        <div class="flex justify-start items-center gap-x-[10px]">
+                            <div
+                                class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
+                                <img width="20" height="20" src="/assets/Brain.png">
+                            </div>
+                            <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">Frame
+                                Generation</p>
                         </div>
-
-                        <span>Overlay</span>
+                        <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Aplique nossa tecnologia de
+                            upscaling e frame generation no seu jogo para duplicar seu FPS!</p>
                     </div>
-
-                    <p>Além disso tudo, utilize nosso overlay de performance para monitorar os recursos do seu PC em
-                        tempo real!</p>
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                        <div class="flex justify-start items-center gap-x-[10px]">
+                            <div
+                                class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
+                                <img width="20" height="20" src="/assets/monitor.png">
+                            </div>
+                            <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">Overlay</p>
+                        </div>
+                        <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Além disso tudo, utilize nosso
+                            overlay de performance para monitorar os recursos do seu PC em tempo real!</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <div class="line__gray"></div>
-
-    <section class="container__compatibility">
-        <h1 class="red-text">COMPATIBILIDADE</h1>
-        <h2 class="white-text">SUPORTA TODAS AS MARCAS/MODELOS (AMD, INTEL E NVIDIA).</h2>
-        <div class="compatibility__content">
-            <img src="./assets/amd.png" alt="">
-            <img src="./assets/Nvidia.png" alt="">
-            <img src="./assets/intel.png" alt="">
+        <div class="w-full flex justify-center items-center">
+            <div class="w-[1366px]">
+                <div class="w-full" style="padding: 0px;">
+                    <div class="w-full" style="height: 1px; background-color: rgba(255, 255, 255, 0.1);"></div>
+                </div>
+            </div>
         </div>
-    </section>
-
-    <div class="line__gray"></div>
-
-    <section class="container__games">
-        <h1>OTIMIZE SEUS JOGOS FAVORITOS!</h1>
-        <h2>COM O FIVE.FPS, VOCÊ PODE OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</h2>
-
-        <div class="container__images__games">
-            <img src="./assets/cardGames.png" alt="">
+        <div class="w-full text-center">
+            <p class="text-[18px] text-[#BD162C] font-[700] text-center">COMPATIBILIDADE</p>
+            <p class="text-[20px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400] text-center">SUPORTA TODAS AS
+                MARCAS/MODELOS (AMD, INTEL E NVIDIA).</p>
         </div>
-    </section>
+        <div class="w-full flex flex-wrap justify-center items-center gap-x-[40px] gap-y-[40px] pb-[60px]">
+            <div class="w-[220px] h-[220px] flex justify-center items-center bg-[#BD162C]">
+                <div class="w-[180px] h-[180px]"
+                    style="background-image: url(assets/amd.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                </div>
+            </div>
+            <div class="w-[220px] h-[220px] flex justify-center items-center bg-[#BD162C]">
+                <div class="w-[180px] h-[180px]"
+                    style="background-image: url(assets/Nvidia.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                </div>
+            </div>
+            <div class="w-[220px] h-[220px] flex justify-center items-center bg-[#BD162C]">
+                <div class="w-[180px] h-[180px]"
+                    style="background-image: url(assets/intel.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div
+        class="w-full flex flex-col justify-start items-start bg-[#FFFFFF] dark:bg-[#000000] gap-y-[40px] px-[40px] py-[40px]">
+        <div class="w-full flex flex-col justify-center items-center text-center">
+            <p class="text-[18px] text-[#BD162C] font-[700] text-center">OTIMIZE SEUS JOGOS FAVORITOS!</p>
+            <p class="text-[20px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400] text-center">COM O FIVE.FPS, VOCÊ PODE
+                OTIMIZAR TODOS OS JOGOS INSTALADOS NO SEU COMPUTADOR!</p>
+        </div>
+        <div class="w-full flex justify-center items-center">
+            <div class="w-full md:w-[900px] md:h-[360px] h-[120px]"
+                style="background-image: url(assets/cardGames.png); background-size: cover; background-position: center center; background-repeat: no-repeat;">
+            </div>
+        </div>
+    </div>
 
 
     <section class="container__plans">
