--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-full xl:w-auto grid grid-cols-2 gap-[20px]">
+                <div class="w-full xl:w-auto teste grid-cols-2 gap-[20px]">
                     <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
@@ -838,18 +838,12 @@
 
     <div
         class="w-full flex flex-col justify-center items-center gap-y-[20px] bg-[#FFFFFF] dark:bg-[#000000] px-[40px] md:px-[80px] py-[40px]">
-        <div class="w-full h-[50px] flex">
-            <div class="w-full h-full flex justify-start items-center gap-x-[20px]">
-                <img class="w-[50px]" src="/assets/mastercard.png">
-                <img class="w-[60px]" src="/assets/visa.png">
-                <img class="w-[80px]" src="/assets/pix.png">
-                <img class="w-[50px]" src="/assets/boleto.png">
-                <img class="w-[80px]" src="/assets/paypal.png">
-            </div>
-
-            <div class="w-[150px] h-full flex justify-center items-center">
-                <img width="100%" src="/assets/secury.png">
-            </div>
+        <div class="w-full flex flex-col justify-center items-center gap-y-[10px]">
+            <div class="w-[150px]"><img src="/assets/secury.png"></div>
+            <div class="w-full flex justify-center items-center gap-x-[20px]"><img class="w-[50px]"
+                    src="/assets/mastercard.png"><img class="w-[50px]" src="/assets/visa.png"><img class="w-[50px]"
+                    src="/assets/pix.png"><img class="w-[50px]" src="/assets/boleto.png"><img class="w-[50px]"
+                    src="/assets/paypal.png"></div>
         </div>
         <div class="w-full" style="padding: 0px;">
             <div class="w-full" style="height: 1px; background-color: rgba(255, 255, 255, 0.1);"></div>
