--- a/index.html
+++ b/index.html
@@ -586,33 +586,20 @@
                     cliques, você será capaz de usar todas nossas otimizações e nossa Inteligência Artificial!</p>
             </div>
             <div class="flex justify-start items-start gap-[40px]">
-                <div class="relative aspect-w-16 aspect-h-9 xl:w-[700px] rounded-[4px] overflow-hidden cursor-pointer">
-                    <div class="relative h-[400px] flex justify-center items-center">
-                        <div class="w-full h-full absolute top-[0px] left-[0px]" style="opacity: 0;">
-                            <div class="absolute top-[60px] left-[60px]" style="opacity: 1;">
-                                <div class="w-[1px] h-[1px] pointer-events-none"
-                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                            </div>
-                            <div class="absolute bottom-[60px] right-[60px]" style="opacity: 1;">
-                                <div class="w-[1px] h-[1px] pointer-events-none"
-                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                            </div><img alt="" src="/assets/cod-with-perf-overlay.webp" width="100%" style="opacity: 0;">
+                <div class="relative w-full rounded-[4px] overflow-hidden cursor-pointer">
+                    <div class="relative h-[400px] flex justify-center items-center" style="opacity: 1;">
+                        <div class="absolute top-[60px] left-[60px]" style="opacity: 1;">
+                            <div class="w-[1px] h-[1px] pointer-events-none"
+                                style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
                         </div>
-                        <div class="w-full h-full absolute top-[0px] left-[0px]" style="opacity: 1;">
-                            <div class="absolute top-[60px] left-[60px]" style="opacity: 0;">
-                                <div class="w-[1px] h-[1px] pointer-events-none"
-                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                            </div>
-                            <div class="absolute bottom-[60px] right-[60px]" style="opacity: 0;">
-                                <div class="w-[1px] h-[1px] pointer-events-none"
-                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                            </div><img alt="" src="/assets/rocket-league-with-perf-overlay.webp" width="100%"
-                                style="opacity: 1;">
-                        </div>
+                        <div class="absolute bottom-[60px] right-[60px]" style="opacity: 1;">
+                            <div class="w-[1px] h-[1px] pointer-events-none"
+                                style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                        </div><img alt="" src="/assets/cs2-with-perf-overlay.webp" width="100%" style="opacity: 1;">
                     </div>
                 </div>
-                <div class="w-full xl:w-auto teste grid-cols-2 gap-[20px]">
-                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                <div class="w-full grid grid-cols-2 gap-[20px]">
+                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
@@ -621,10 +608,10 @@
                             <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">Windows
                                 Tweaks</p>
                         </div>
-                        <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Aplique diversas otimizações para o
-                            seu sistema operacional e para sua placa gráfica!</p>
+                        <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Aplique diversas otimizações
+                            para o seu sistema operacional e para sua placa gráfica!</p>
                     </div>
-                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
@@ -635,7 +622,7 @@
                         <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Otimize as threads do seu jogo e
                             congele serviços e aplicações enquanto estiver jogando!</p>
                     </div>
-                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
@@ -647,13 +634,14 @@
                         <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Aplique nossa tecnologia de
                             upscaling e frame generation no seu jogo para duplicar seu FPS!</p>
                     </div>
-                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
                                 <img width="20" height="20" src="/assets/monitor.png">
                             </div>
-                            <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">Overlay</p>
+                            <p class="max-w-[130px] text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] truncate">Overlay
+                            </p>
                         </div>
                         <p class="text-[12px] text-[#4A4A4A] dark:text-[#BABABABA]">Além disso tudo, utilize nosso
                             overlay de performance para monitorar os recursos do seu PC em tempo real!</p>
@@ -661,6 +649,7 @@
                 </div>
             </div>
         </div>
+
         <div class="w-full flex justify-center items-center">
             <div class="w-[1366px]">
                 <div class="w-full" style="padding: 0px;">
