--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section id="BUY_SECTION" class="relative w-full min-h-[800px] bg-[#FFFFFF] dark:bg-[#111111]"
+    <section id="BUY_SECTION" class="relative w-full min-h-[800px]"
         style="background-image: url(&quot;https://i.imgur.com/3gR8GpX.png&quot;); background-size: contain; background-position: left bottom; background-repeat: no-repeat;">
         <div
             class="absolute w-full h-full flex flex-wrap flex-row justify-center items-center gap-x-[40px] gap-y-[40px] px-[40px] py-[80px] overflow-hidden">
@@ -268,10 +268,11 @@
                 </ul>
             </div>
         </div>
-        <div class="red-effect"></div>
     </section>
 
-    <div class=" w-full flex flex-col justify-start items-start gap-y-[40px] px-[15px] md:px-[40px] py-[80px]">
+
+
+    <div class=" w-full flex flex-col justify-start items-start gap-y-[40px] px-[15px] md:px-[40px] py-[80px] mt-10">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700] text-center">SPLIT TUNNELING</p>
             <p class="text-[20px] lg:text-[32px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400] text-center">ACABE COM O
