--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         Seu Desempenho!</p>
                     <div>
                         <div class="flex justify-start items-center gap-x-[5px]"><img width="18" height="18"
-                                src="/assets/fireico.png">
+                                src="./assets/fireico.png">
                             <p class="md:text-[16px] text-[14px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[700]">Por
                                 que escolher o FiveFPS?</p>
                         </div>
@@ -32,7 +32,7 @@
                     </div>
                     <div>
                         <div class="flex justify-start items-center gap-x-[5px]"><img width="18" height="18"
-                                src="/assets/checkico.png">
+                                src="./assets/checkico.png">
                             <p class="md:text-[16px] text-[14px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[700]">
                                 Desempenho Superior:</p>
                         </div>
@@ -43,7 +43,7 @@
                     </div>
                     <div>
                         <div class="flex justify-start items-center gap-x-[5px]"><img width="18" height="18"
-                                src="/assets/graphicico.png">
+                                src="./assets/graphicico.png">
                             <p class="md:text-[16px] text-[14px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[700]">
                                 Jogabilidade Ininterrupta:</p>
                         </div>
@@ -167,7 +167,7 @@
         <div class="w-full flex flex-wrap justify-center items-center gap-x-[100px] gap-y-[50px]">
             <div class="w-[250px] h-[300px] flex flex-col justify-center items-center gap-y-[20px]">
                 <div class="w-[100px] h-[100px]"
-                    style="background-image: url(assets/resourceswin.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                    style="background-image: url(./assets/resourceswin.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
                 </div>
                 <div class="w-full text-center">
                     <p class="text-[22px] text-[#4A4A4A] dark:text-[#FFFFFF] text-center font-[700]">Sistema Operacional
@@ -178,7 +178,7 @@
             </div>
             <div class="w-[250px] h-[300px] flex flex-col justify-center items-center gap-y-[20px]">
                 <div class="w-[100px] h-[100px]"
-                    style="background-image: url(/assets/mouse.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                    style="background-image: url(./assets/mouse.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
                 </div>
                 <div class="w-full text-center">
                     <p class="text-[22px] text-[#4A4A4A] dark:text-[#FFFFFF] text-center font-[700]">MAF</p>
@@ -188,7 +188,7 @@
             </div>
             <div class="w-[250px] h-[300px] flex flex-col justify-center items-center gap-y-[20px]">
                 <div class="w-[100px] h-[100px]"
-                    style="background-image: url(/assets/gpu.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                    style="background-image: url(./assets/gpu.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
                 </div>
                 <div class="w-full text-center">
                     <p class="text-[22px] text-[#4A4A4A] dark:text-[#FFFFFF] text-center font-[700]">GPU</p>
