--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                         <div class="absolute bottom-[60px] right-[60px]" style="opacity: 1;">
                             <div class="w-[1px] h-[1px] pointer-events-none"
                                 style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                        </div><img alt="" src="/assets/cs2-with-perf-overlay.webp" width="100%" style="opacity: 1;">
+                        </div><img alt="" src="./assets/cs2-with-perf-overlay.webp" width="100%" style="opacity: 1;">
                     </div>
                 </div>
                 <div class="w-full grid grid-cols-2 gap-[20px]">
@@ -815,7 +815,7 @@
 
     <div
         class="w-full flex flex-col md:flex-row justify-center items-center bg-[#FFFFFF] dark:bg-[#000000] gap-y-[40px] md:gap-x-[80px] px-[40px] py-[90px]">
-        <img width="300px" src="/assets/7days.png">
+        <img width="300px" src="./assets/7days.png">
         <div class="flex flex-col justify-center items-center gap-y-[5px]">
             <p class="text-[24px] text-[#FFFFFF] text-center font-[700] max-w-[400px]">Política de Devolução</p>
             <p class="text-[14px] text-[#BABABA] text-center font-[400] max-w-[400px]">Se em até <span
@@ -829,11 +829,11 @@
     <div
         class="w-full flex flex-col justify-center items-center gap-y-[20px] bg-[#FFFFFF] dark:bg-[#000000] px-[40px] md:px-[80px] py-[40px]">
         <div class="w-full flex flex-col justify-center items-center gap-y-[10px]">
-            <div class="w-[150px]"><img src="/assets/secury.png"></div>
+            <div class="w-[150px]"><img src="./assets/secury.png"></div>
             <div class="w-full flex justify-center items-center gap-x-[20px]"><img class="w-[50px]"
-                    src="/assets/mastercard.png"><img class="w-[50px]" src="/assets/visa.png"><img class="w-[50px]"
-                    src="/assets/pix.png"><img class="w-[50px]" src="/assets/boleto.png"><img class="w-[50px]"
-                    src="/assets/paypal.png"></div>
+                    src="./assets/mastercard.png"><img class="w-[50px]" src="/assets/visa.png"><img class="w-[50px]"
+                    src="./assets/pix.png"><img class="w-[50px]" src="./assets/boleto.png"><img class="w-[50px]"
+                    src="./assets/paypal.png"></div>
         </div>
         <div class="w-full" style="padding: 0px;">
             <div class="w-full" style="height: 1px; background-color: rgba(255, 255, 255, 0.1);"></div>
