--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             class="w-full flex flex-col xl:flex-row justify-center items-start gap-y-[50px] xl:gap-x-[50px] px-[50px] xl:px-[0px]">
             <div class="relative w-full xl:w-[800px] rounded-[4px] overflow-hidden cursor-pointer">
                 <div class="absolute top-[60px] left-[60px]">
-                    <div class="w-[1px] h-[1px] pointer-events-none"    
+                    <div class="w-[1px] h-[1px] pointer-events-none"
                         style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 30px;"></div>
                 </div>
                 <div class="absolute bottom-[60px] right-[60px]">
@@ -343,8 +343,7 @@
                 SEU PING COM NOSSOS SERVIDORES</p>
         </div>
         <div class="w-full flex justify-center items-center z-[10]">
-            <div
-                class="w-[1024px] border border-[rgba(255,255,255,0.1)] rounded-[4px] overflow-hidden">
+            <div class="w-[1024px] border border-[rgba(255,255,255,0.1)] rounded-[4px] overflow-hidden">
                 <div
                     class="w-full flex justify-between items-center py-[20px] px-[20px] border-b bg-[#333333] border-[rgba(255,255,255,0.1)]">
                     <div class="flex justify-start items-center gap-x-[5px]"><svg xmlns="http://www.w3.org/2000/svg"
@@ -602,7 +601,7 @@
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
-                                <img width="20" height="20" src="/assets/mallet.png">
+                                <img width="20" height="20" src="./assets/mallet.png">
                             </div>
                             <p class="max-w-[130px] text-[14px] text-[#FFFFFF] truncate">Windows
                                 Tweaks</p>
@@ -614,7 +613,7 @@
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
-                                <img width="20" height="20" src="/assets/ice.png">
+                                <img width="20" height="20" src="./assets/ice.png">
                             </div>
                             <p class="max-w-[130px] text-[14px] text-[#FFFFFF] truncate">GPO</p>
                         </div>
@@ -625,7 +624,7 @@
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
-                                <img width="20" height="20" src="/assets/Brain.png">
+                                <img width="20" height="20" src="./assets/Brain.png">
                             </div>
                             <p class="max-w-[130px] text-[14px] text-[#FFFFFF] truncate">Frame
                                 Generation</p>
@@ -637,7 +636,7 @@
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
-                                <img width="20" height="20" src="/assets/monitor.png">
+                                <img width="20" height="20" src="./assets/monitor.png">
                             </div>
                             <p class="max-w-[130px] text-[14px] text-[#FFFFFF] truncate">Overlay
                             </p>
@@ -680,8 +679,7 @@
         </div>
     </div>
 
-    <div
-        class="w-full flex flex-col justify-start items-start bg-[#000000] gap-y-[40px] px-[40px] py-[40px]">
+    <div class="w-full flex flex-col justify-start items-start bg-[#000000] gap-y-[40px] px-[40px] py-[40px]">
         <div class="w-full flex flex-col justify-center items-center text-center">
             <p class="text-[18px] text-[#BD162C] font-[700] text-center">OTIMIZE SEUS JOGOS FAVORITOS!</p>
             <p class="text-[20px] text-[#FAFAFA] font-[400] text-center">COM O FIVE.FPS, VOCÊ PODE
