--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    
+<!--Potencialize Seu Desempenho-->
     <section id="BUY_SECTION" class="relative w-full min-h-[800px]"
         style="background-image: url(&quot;https://i.imgur.com/3gR8GpX.png&quot;); background-size: contain; background-position: left bottom; background-repeat: no-repeat;">
         <div
@@ -73,7 +75,8 @@
     <div class="container__button-after-hero">
         <button class="btn-main">OBTENHA AGORA!</button>
     </div>
-
+    
+<!--TUTORIAL-->
     <div class="relative w-full flex flex-col justify-start items-start gap-y-[50px] py-[100px] overflow-hidden">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700]">TUTORIAL</p>
@@ -155,6 +158,7 @@
         </div>
     </div>
 
+<!--NÃO PERCA TEMPO -->
     <div class="w-full min-h-[500px] flex flex-col justify-center items-center gap-y-[90px] bg-[#111111] py-[40px] px-[40px]"
         id="FEATURE_SECTION">
         <div class="w-full text-center">
@@ -205,6 +209,7 @@
         </div>
     </div>
 
+<!--INTELIGÊNCIA ARTIFICIAL-->
     <section class="container__ai">
         <h1>INTELIGÊNCIA ARTIFICIAL</h1>
         <h2>UPSCALING E FRAME GENERATION</h2>
@@ -268,8 +273,7 @@
         </div>
     </section>
 
-
-
+<!--SPLIT TUNNELING -->
     <div class=" w-full flex flex-col justify-start items-start gap-y-[40px] px-[15px] md:px-[40px] py-[80px] mt-10">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700] text-center">SPLIT TUNNELING</p>
@@ -336,6 +340,7 @@
         </div>
     </div>
 
+<!--VEJA SEU PING APRIMORADO-->
     <div class="w-full flex flex-col gap-y-[60px] px-[40px] py-[80px]">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700] text-center">VEJA SEU PING APRIMORADO!</p>
@@ -574,7 +579,7 @@
         </div>
     </div>
 
-
+<!--EXPERIMENTE AGORA-->
     <div class="w-full min-h-[500px] flex flex-col justify-center items-center gap-y-[50px] bg-[#000000] py-[40px] px-[40px]"
         id="COMPATIBILITY_SECTION">
         <div class="w-full flex flex-col justify-center items-center gap-y-[40px]">
@@ -824,10 +829,10 @@
 
     <div
         class="w-full flex flex-col justify-center items-center gap-y-[20px] bg-[#000000] px-[40px] md:px-[80px] py-[40px]">
-        <div class="w-full flex flex-col justify-center items-center gap-y-[10px]">
+        <div class="w-full flex flex-col justify-center items-center gap-y-[10px]" id="policy">
             <div class="w-[150px]"><img src="./assets/secury.png"></div>
-            <div class="w-full flex justify-center items-center gap-x-[20px]"><img class="w-[50px]"
-                    src="./assets/mastercard.png"><img class="w-[50px]" src="/assets/visa.png"><img class="w-[50px]"
+            <div class="w-full flex justify-center items-center gap-x-[20px]" id="policyCards"><img class="w-[50px]"
+                    src="./assets/mastercard.png"><img class="w-[50px]" src="./assets/visa.png"><img class="w-[50px]"
                     src="./assets/pix.png"><img class="w-[50px]" src="./assets/boleto.png"><img class="w-[50px]"
                     src="./assets/paypal.png"></div>
         </div>
