--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    
-<!--Potencialize Seu Desempenho-->
+
+    <!--Potencialize Seu Desempenho-->
     <section id="BUY_SECTION" class="relative w-full min-h-[800px]"
         style="background-image: url(&quot;https://i.imgur.com/3gR8GpX.png&quot;); background-size: contain; background-position: left bottom; background-repeat: no-repeat;">
         <div
@@ -75,8 +75,8 @@
     <div class="container__button-after-hero">
         <button class="btn-main">OBTENHA AGORA!</button>
     </div>
-    
-<!--TUTORIAL-->
+
+    <!--TUTORIAL-->
     <div class="relative w-full flex flex-col justify-start items-start gap-y-[50px] py-[100px] overflow-hidden">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700]">TUTORIAL</p>
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-<!--NÃO PERCA TEMPO -->
+    <!--NÃO PERCA TEMPO -->
     <div class="w-full min-h-[500px] flex flex-col justify-center items-center gap-y-[90px] bg-[#111111] py-[40px] px-[40px]"
         id="FEATURE_SECTION">
         <div class="w-full text-center">
@@ -209,7 +209,7 @@
         </div>
     </div>
 
-<!--INTELIGÊNCIA ARTIFICIAL-->
+    <!--INTELIGÊNCIA ARTIFICIAL-->
     <section class="container__ai">
         <h1>INTELIGÊNCIA ARTIFICIAL</h1>
         <h2>UPSCALING E FRAME GENERATION</h2>
@@ -273,7 +273,7 @@
         </div>
     </section>
 
-<!--SPLIT TUNNELING -->
+    <!--SPLIT TUNNELING -->
     <div class=" w-full flex flex-col justify-start items-start gap-y-[40px] px-[15px] md:px-[40px] py-[80px] mt-10">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700] text-center">SPLIT TUNNELING</p>
@@ -340,7 +340,7 @@
         </div>
     </div>
 
-<!--VEJA SEU PING APRIMORADO-->
+    <!--VEJA SEU PING APRIMORADO-->
     <div class="w-full flex flex-col gap-y-[60px] px-[40px] py-[80px]">
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700] text-center">VEJA SEU PING APRIMORADO!</p>
@@ -579,9 +579,10 @@
         </div>
     </div>
 
-<!--EXPERIMENTE AGORA-->
+    <!--EXPERIMENTE AGORA-->
     <div class="w-full min-h-[500px] flex flex-col justify-center items-center gap-y-[50px] bg-[#000000] py-[40px] px-[40px]"
         id="COMPATIBILITY_SECTION">
+
         <div class="w-full flex flex-col justify-center items-center gap-y-[40px]">
             <div class="w-full flex flex-col justify-center items-center">
                 <p class="text-[18px] text-[#BD162C] font-[700] text-center">EXPERIMENTE AGORA!</p>
@@ -589,20 +590,22 @@
                     cliques, você será capaz de usar todas nossas otimizações e nossa Inteligência Artificial!</p>
             </div>
             <div class="flex justify-start items-start gap-[40px]">
-                <div class="relative w-full rounded-[4px] overflow-hidden cursor-pointer">
-                    <div class="relative h-[400px] flex justify-center items-center" style="opacity: 1;">
-                        <div class="absolute top-[60px] left-[60px]" style="opacity: 1;">
-                            <div class="w-[1px] h-[1px] pointer-events-none"
-                                style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                <div class="relative aspect-w-16 aspect-h-9 xl:w-[700px] rounded-[4px] overflow-hidden cursor-pointer">
+                    <div class="relative h-[400px] flex justify-center items-center">
+                        <div class="w-full h-full absolute top-[0px] left-[0px]" style="opacity: 1;">
+                            <div class="absolute top-[60px] left-[60px]" style="opacity: 1;">
+                                <div class="w-[1px] h-[1px] pointer-events-none"
+                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                            </div>
+                            <div class="absolute bottom-[60px] right-[60px]" style="opacity: 1;">
+                                <div class="w-[1px] h-[1px] pointer-events-none"
+                                    style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
+                            </div><img alt="" src="/assets/wow-with-perf-overlay.webp" width="100%" style="opacity: 1;">
                         </div>
-                        <div class="absolute bottom-[60px] right-[60px]" style="opacity: 1;">
-                            <div class="w-[1px] h-[1px] pointer-events-none"
-                                style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                        </div><img alt="" src="./assets/cs2-with-perf-overlay.webp" width="100%" style="opacity: 1;">
                     </div>
                 </div>
-                <div class="w-full grid grid-cols-2 gap-[20px]">
-                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                <div class="w-full xl:w-auto grid grid-cols-2 gap-[20px]">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
@@ -614,7 +617,7 @@
                         <p class="text-[12px] text-[#BABABABA]">Aplique diversas otimizações
                             para o seu sistema operacional e para sua placa gráfica!</p>
                     </div>
-                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
@@ -625,7 +628,7 @@
                         <p class="text-[12px] text-[#BABABABA]">Otimize as threads do seu jogo e
                             congele serviços e aplicações enquanto estiver jogando!</p>
                     </div>
-                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
@@ -637,11 +640,11 @@
                         <p class="text-[12px] text-[#BABABABA]">Aplique nossa tecnologia de
                             upscaling e frame generation no seu jogo para duplicar seu FPS!</p>
                     </div>
-                    <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
+                    <div class="w-[200px] h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
                                 class="w-[40px] h-[40px] flex justify-center items-center border border-[#BD162C] bg-[#BD162C40] rounded-[4px]">
-                                <img width="20" height="20" src="./assets/monitor.png">
+                                <img width="20" height="20" src="/assets/monitor.png">
                             </div>
                             <p class="max-w-[130px] text-[14px] text-[#FFFFFF] truncate">Overlay
                             </p>
@@ -653,6 +656,7 @@
             </div>
         </div>
 
+        <!--COMPATIBILIDADE-->
         <div class="w-full flex justify-center items-center">
             <div class="w-[1366px]">
                 <div class="w-full" style="padding: 0px;">
@@ -698,6 +702,7 @@
     </div>
 
 
+    <!--SEJA PREMIUM-->
     <section class="container__plans">
         <h1>SEJA PREMIUM</h1>
         <h2>E DESFRUTE DE TUDO O QUE O FIVEFPS OFERECE</h2>
@@ -762,6 +767,7 @@
         </div>
     </section>
 
+    <!--FUCIONALIDADES-->
     <div class="w-full flex flex-col justify-start items-start gap-y-[80px] py-[80px]">
         <div class="w-full flex flex-col justify-center items-center px-[20px]">
             <p class="text-[18px] lg:text-[24px] text-[#BD162C] font-[700] text-center">FUNCIONALIDADES</p>
@@ -814,6 +820,7 @@
         </div>
     </div>
 
+
     <div
         class="w-full flex flex-col md:flex-row justify-center items-center bg-[#000000] gap-y-[40px] md:gap-x-[80px] px-[40px] py-[90px]">
         <img width="300px" src="./assets/7days.png">
@@ -827,6 +834,8 @@
         </div>
     </div>
 
+
+    <!--RODAPE-->
     <div
         class="w-full flex flex-col justify-center items-center gap-y-[20px] bg-[#000000] px-[40px] md:px-[80px] py-[40px]">
         <div class="w-full flex flex-col justify-center items-center gap-y-[10px]" id="policy">
